<?xml version="1.0"?>
<package format="3">
  <name>move_to_goal_bt</name>
  <version>0.0.1</version>
  <description>MoveToGoalNode Behavior Tree node using NavigateToPose</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
